Added 100% of DAO impl.

--- a/src/main/webapp/web.xml
+++ b/src/main/webapp/web.xml
@@ -14,6 +14,10 @@
             <param-name>jersey.config.server.provider.packages</param-name>
             <param-value>nl.hu.v1wac.firstapp.webservices</param-value>
         </init-param>
+        <init-param>
+            <param-name>jersey.config.server.provider.classnames</param-name>
+            <param-value>org.glassfish.jersey.server.filter.RolesAllowedDynamicFeature</param-value>
+        </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
