--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
           <artifactId>json</artifactId>
           <version>20180130</version>
       </dependency>
+      <dependency>
+          <groupId>io.jsonwebtoken</groupId>
+          <artifactId>jjwt</artifactId>
+          <version>0.9.0</version>
+      </dependency>
   </dependencies>
 
   <build>
